# chip8_rs

./: Cargo.toml  README.md
src/: cpu.rs  main.rs  old_main.rs
src/drivers/: audio.rs  display.rs  input.rs  mod.rs  timing.rs
