[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.7", features = ["derive"] }
macroquad = "0.4.8"
rand = "0.8.5"
rfd = "0.14.1"
